# pylintseq

./: README.md  pyproject.toml
src/pylintseq/: generate.py  utils.py
