[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pylintseq"
version = "0.0.1.post4"
authors = [
  { name="Ulyana Piterbarg", email="up2021@nyu.edu" },
]
description = "LintSeq with PyLint-Guided Sampling"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonlines",
    "pylint",
    "numpy",
    "pandas",
    "tqdm",
    "joblib",
    "psutil",
]
[project.urls]
Homepage = "https://lintseq.github.io"
Repository = "https://github.com/upiterbarg/pylintseq.git"
[project.scripts]
pylintseq = "pylintseq.generate:generate"